--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 /* Estilos gerais para o body */
 body {
     font-family: Arial, sans-serif;
-    background-color: #121212;
-    color: #f1f1f1;
+    background-color: #f4f4f4;
+    color: #333;
     margin: 0;
     padding: 0;
 }
@@ -46,7 +46,7 @@ header nav ul li a:hover {
     animation: fadeIn 2s ease-out;
 }
 
-/* Estilo para títulos principais */
+/* Estilo para o título principal */
 .sobre h1 {
     font-size: 36px;
     margin-bottom: 20px;
@@ -55,11 +55,13 @@ header nav ul li a:hover {
 
 /* Estilo para cada seção de informações (Missão, Visão, etc.) */
 .info-section {
-    margin-bottom: 30px;
-    text-align: left;
+    background-color: #fff;
+    padding: 20px;
+    margin: 20px auto;
     width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    text-align: left;
 }
 
 .info-section h2 {
@@ -70,10 +72,10 @@ header nav ul li a:hover {
 
 .info-section p, .info-section ul {
     font-size: 18px;
-    color: #ccc;
+    color: #555;
 }
 
-/* Estilos para a lista de valores */
+/* Estilo para lista de valores */
 .info-section ul {
     list-style-type: none;
     padding-left: 0;
